Bug 62673 - EDITING: non editable cells in table when cells are merged
Summary: EDITING: non editable cells in table when cells are merged
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium normal
Assignee: Karthikeyan Krishnamurthi
URL:
Whiteboard: target:4.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-23 15:25 UTC by blubb
Modified: 2013-04-26 22:12 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
example with table and merged cells (12.94 KB, application/vnd.oasis.opendocument.presentation)
2013-03-23 15:28 UTC, Jacqueline Rahemipour
Details

Note You need to log in before you can comment on or make changes to this bug.
Description blubb 2013-03-23 15:25:45 UTC
Merged cells aren't editable when the cells below are having different sizes and the left one is smaller than the right one.
If you then click in the midlle of the merged cells you can't edit the cell. You need to go to the beginning or the end of the cell to be able to edit the text in the cell. It is only editable till the end of the first column, not after the end of the cell.
Comment 1 Jacqueline Rahemipour 2013-03-23 15:28:22 UTC
Created attachment 76943 [details]
example with table and merged cells
Comment 2 Jacqueline Rahemipour 2013-03-23 15:29:27 UTC
Confirmed. See attached example.
Reproducible since version 3.3 on Linux and Windows
Comment 3 Karthikeyan Krishnamurthi 2013-04-14 09:43:39 UTC
submitted a patch for this bug here -> https://gerrit.libreoffice.org/#/c/3273/

People willing to test can git pull.  Give your feedback/review if you are tested the patch.
Comment 4 Commit Notification 2013-04-26 07:53:08 UTC
karth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bd1e5791951c0e8eae6e79f1789ba1115cdead53

Resolves fdo#62673 Table cells non-editable on cell merge



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Lior Kaplan 2013-04-26 22:12:22 UTC
Fix verified on a build from master.