Resolves fdo#62673 Table cells non-editable on cell merge

Previously the area calculation for returning SDRTABLEHIT_CELL is
done only using the first(origin) cell in the range of merged cells.
Now changed to calculate the area of the remaining merged cells also.

Change-Id: I2d9244115d08e31b46dbe1a4998e6a763ee38361